force-app/main/default/objects/Case/fields/High_Risk__c.field-meta.xml
<CustomField>
    <fullName>High_Risk__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether this Case is currently considered high-risk for manager review.</description>
    <inlineHelpText>Selected when the Case meets high-risk criteria and should be reviewed by a support manager.</inlineHelpText>
    <label>High Risk</label>
    <type>Checkbox</type>
</CustomField>