force-app/main/default/objects/Case/fields/High_Risk_Override__c.field-meta.xml
<CustomField>
    <fullName>High_Risk_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >Allows a manager or authorized user to manually keep a Case flagged for Scenario 001 review.</description>
    <label>High Risk Override</label>
    <type>Checkbox</type>
</CustomField>