force-app/main/default/objects/Case/fields/High_Risk_Reason__c.field-meta.xml
<CustomField>
    <fullName>High_Risk_Reason__c</fullName>
    <description
  >Explains why this Case is considered high-risk for manager review.</description>
    <inlineHelpText
  >Use this field to identify the primary reason a Case was marked high-risk.</inlineHelpText>
    <label>High Risk Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Top-Tier Customer</fullName>
            </value>
            <value>
                <fullName>Critical Severity</fullName>
            </value>
            <value>
                <fullName>Strategic Customer</fullName>
            </value>
            <value>
                <fullName>Stale Case</fullName>
            </value>
            <value>
                <fullName>Manual Review</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>