force-app/main/default/objects/Case/listViews/Open_High_Risk_Cases.listView-meta.xml
<ListView>
    <fullName>Open_High_Risk_Cases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.STATUS</columns>
    <columns>OWNER_NAME</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CASES.LAST_UPDATE</columns>
    <columns>High_Risk_Reason__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.CLOSED</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>High_Risk__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Open High-Risk Cases</label>
</ListView>